--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^7.8.3",
     "mongoose-unique-validator": "^4.0.1",
     "next": "15.0.4",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.4.1"
