--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose-unique-validator": "^4.0.1",
     "next": "15.0.4",
     "next-auth": "^4.24.11",
+    "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.4.1",
