--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bootstrap-material-design": "^4.1.3",
+    "cloudinary": "^2.5.1",
     "mongodb": "^6.11.0",
     "mongoose": "^7.8.3",
     "mongoose-unique-validator": "^4.0.1",
