--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^5.1.1",
     "bootstrap-material-design": "^4.1.3",
     "cloudinary": "^2.5.1",
+    "dayjs": "^1.11.13",
     "mongodb": "^6.11.0",
     "mongoose": "^7.8.3",
     "mongoose-unique-validator": "^4.0.1",
