--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.4.0",
     "react-image-file-resizer": "^0.4.8",
     "slugify": "^1.6.6"
   }
